# SOTallerFilesystem

./: .gitignore  CMakeLists.txt
src/: ext2fs.cpp
test/: testhdd
